# cluster-api-provider-gcp

./: .gitignore  .golangci.yml  .markdownlinkcheck.json  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Gopkg.toml  Makefile  OWNERS  OWNERS_ALIASES  PORTING-SUMMARY.md  PROJECT  PR_COMPARISON.md  README.md  RELEASE.md  Tiltfile  WORKSPACE  capi-quickstart.yaml  clients.go  cloudbuild-nightly.yaml  cloudbuild.yaml  cluster.go  clusterctl-settings.json  gkecluster.go  gkemachinepool.go  go.mod  go.sum  machine.go  main.go  metadata.yaml  netlify.toml  tilt-provider.json  v1.19.1
.github/: dependabot.yml
.github/workflows/: codespell.yml  cover.yaml  link-check.yml  lint-link.yml  lint.yml  pr-gh-workflow-approve.yaml
api/exp/: gkecluster_types.go  gkemachinepool_types.go
api/v1alpha2/: gcpcluster_types.go  gcpmachine_types.go  gcpmachinetemplate_types.go  labels.go  types.go  zz_generated.deepcopy.go
api/v1alpha3/: doc.go  gcpcluster_conversion.go  gcpcluster_types.go  gcpmachine_conversion.go  gcpmachine_types.go  gcpmachine_webhook.go  gcpmachine_webhook_test.go  gcpmachinetemplate_conversion.go  gcpmachinetemplate_types.go  gcpmachinetemplate_webhook.go  gkecluster_types.go  groupversion_info.go  labels.go  types.go  zz_generated.conversion.go  zz_generated.deepcopy.go
api/v1alpha4/: conversion_test.go  doc.go  gcpcluster_conversion.go  gcpcluster_types.go  gcpcluster_webhook.go  gcpclustertemplate_conversion.go  gcpclustertemplate_types.go  gcpclustertemplate_webhook.go  gcpclustertemplate_webhook_test.go  gcpmachine_conversion.go  gcpmachine_types.go  gcpmachine_webhook.go  gcpmachinetemplate_conversion.go  gcpmachinetemplate_types.go  gcpmachinetemplate_webhook.go  groupversion_info.go  labels.go  types.go  zz_generated.conversion.go  zz_generated.deepcopy.go
api/v1beta1/: conditions_consts.go  gcpcluster_types.go  gcpcluster_types_test.go  gcpcluster_webhook.go  gcpcluster_webhook_test.go  gcpclustertemplate_types.go  gcpclustertemplate_webhook.go  gcpclustertemplate_webhook_test.go  gcpmachine_aliasipranges_test.go  gcpmachine_types.go  gcpmachine_webhook.go  gcpmachine_webhook_test.go  gcpmachinetemplate_webhook.go  gcpmachinetemplate_webhook_test.go  labels.go  types.go  zz_generated.deepcopy.go
cloud/: const.go  defaults.go  interfaces.go
cloud/gcperrors/: errors.go
cloud/google/: clusteractuator.go  clusteractuator_test.go  machineactuator.go  machineactuator_test.go  metadata.go  pods.go  serviceaccount.go
cloud/google/gceproviderconfig/v1alpha1/: BUILD.bazel  register.go  types.go
cloud/providerid/: providerid_test.go
cloud/scope/: clients.go  cluster.go  credentials.go  credentials_test.go  firewall.go  getters.go  gkecluster.go  machine.go  machine_test.go  machinepool.go  machinepool_test.go  machinepoolmachine.go  managedcluster.go  managedcontrolplane.go  managedmachinepool.go  managedmachinepool_test.go  mocks.go  scope_suite_test.go
cloud/wait/: wait.go
clusterctl/: main.go
cmd/clusterctl/: BUILD.bazel  main.go
cmd/gce-controller/: BUILD.bazel  Dockerfile  Makefile  main.go
cmd/gce-controller/cluster-controller-app/: BUILD.bazel  controller.go
cmd/gce-controller/cluster-controller-app/options/: BUILD.bazel
cmd/gce-controller/machine-controller-app/: BUILD.bazel  controller.go
cmd/gce-controller/machine-controller-app/options/: BUILD.bazel
cmd/manager/: main.go  (+1 more)
config/: kustomization.yaml
controllers/: gcpcluster_controller.go  gcpcluster_controller_test.go  gcpmachine_annotations.go  gcpmachine_controller.go  gcpmachine_controller_test.go  gcpmachine_controller_unit_test.go  gkecluster_controller.go  helpers.go  suite_test.go
docs/: README.md  conformance.md  development.md  external-cloud-provider.md  flannel.md  prerequisites.md  releasing.md
examples/: generate.sh
exp/: PROJECT  README.md  doc.go
feature/: feature.go
hack/: checkin_account.py  checkout_account.py  ci-test-coverage.sh  common_vars.sh  compute-release-notes-vars.sh  create-dev-cluster.sh  ensure-go.sh  ensure-kind.sh  ensure-kubectl.sh  ensure-kustomize.sh  ensure-yq.sh  heartbeat_account.py  install-cert-manager.sh  kustomize-sub.sh  parse-cred-prow.sh  release-notes.tpl  test-compute-release-notes-vars.sh  util.sh  verify-apidiff  verify-shellcheck.sh  verify-starlark.sh  version.sh
pkg/cloud/google/: BUILD.bazel  cert_utils.go  clientcomputeservice.go  clientcomputeservice_test.go  clusteractuator.go  clusteractuator_test.go  instancestatus.go  machineactuator.go  machineactuator_test.go  metadata.go  pods.go  serviceaccount.go  ssh.go
pkg/cloud/google/clients/: BUILD.bazel  clients_test.go  cloudbilling_test.go  cloudresourcemanagerservice_test.go  computeservice.go  computeservice_test.go  servicemanagement_test.go  token_source.go
pkg/cloud/google/clients/errors/: BUILD.bazel  errors.go
pkg/cloud/google/config/: BUILD.bazel
pkg/cloud/google/machinesetup/: BUILD.bazel  config_types.go  config_types_test.go  interfaces.go
pkg/controller/: BUILD.bazel  add_cluster.go  add_machine.go
scripts/: ci-apidiff.sh  ci-build-kubernetes.sh  ci-build.sh  ci-conformance-old.sh  ci-conformance.sh  ci-e2e.sh  ci-entrypoint.sh  ci-make.sh  ci-test-coverage.sh  ci-test.sh  go_install.sh  kind-with-registry.sh  setup-dev-enviroment.sh
templates/: DUAL_STACK_GUIDE.md  cluster-template-clusterclass.yaml  cluster-template-dual-stack.yaml  cluster-template-external-cloud-provider.yaml  cluster-template-flatcar.yaml  cluster-template-gke-autopilot-clusterclass.yaml  cluster-template-gke-autopilot-topology.yaml  cluster-template-gke-clusterclass.yaml  cluster-template-gke-topology.yaml  cluster-template-gke.yaml  cluster-template-ipv6.yaml  cluster-template-topology.yaml  cluster-template.yaml  create_cloud_conf.sh  kustomizeversions.yaml
tilt_modules/: extensions.json
version/: version.go
webhooks/: gcpcluster_webhook.go  gcpcluster_webhook_test.go  gcpclustertemplate_webhook.go  gcpclustertemplate_webhook_test.go  gcpmachine_webhook.go  gcpmachine_webhook_test.go  gcpmachinetemplate_webhook.go  gcpmachinetemplate_webhook_test.go  validation.go
(+372 files in other folders)
