load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cert_utils.go",
        "clientcomputeservice.go",
        "clusteractuator.go",
        "instancestatus.go",
        "machineactuator.go",
        "metadata.go",
        "pods.go",
        "serviceaccount.go",
        "ssh.go",
    ],
    importpath = "sigs.k8s.io/cluster-api-provider-gcp/pkg/cloud/google",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/gceproviderconfig/v1alpha1:go_default_library",
        "//pkg/cloud/google/clients:go_default_library",
        "//pkg/cloud/google/clients/errors:go_default_library",
        "//pkg/cloud/google/config:go_default_library",
        "//pkg/cloud/google/machinesetup:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
        "//vendor/golang.org/x/oauth2/google:go_default_library",
        "//vendor/google.golang.org/api/compute/v1:go_default_library",
        "//vendor/google.golang.org/api/googleapi:go_default_library",
        "//vendor/gopkg.in/gcfg.v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer/json:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/tools/record:go_default_library",
        "//vendor/k8s.io/client-go/util/cert:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/cluster/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/cert:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/errors:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/kubeadm:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/util:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/client:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/yaml:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "clientcomputeservice_test.go",
        "clusteractuator_test.go",
        "machineactuator_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/gceproviderconfig/v1alpha1:go_default_library",
        "//pkg/cloud/google/machinesetup:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/google.golang.org/api/compute/v1:go_default_library",
        "//vendor/google.golang.org/api/googleapi:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/tools/record:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/cluster/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/cert:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/controller/cluster:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/kubeadm:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/testcmdrunner:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
    ],
)
