load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["options.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-gcp/cmd/gce-controller/machine-controller-app/options",
    visibility = ["//visibility:public"],
    deps = ["//vendor/sigs.k8s.io/cluster-api/pkg/controller/config:go_default_library"],
)
