load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["config_types.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-gcp/pkg/cloud/google/machinesetup",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/gceproviderconfig/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/cluster/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/yaml:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_types_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/gceproviderconfig/v1alpha1:go_default_library",
        "//vendor/sigs.k8s.io/cluster-api/pkg/apis/cluster/v1alpha1:go_default_library",
    ],
)
