load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["errors.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-gcp/pkg/cloud/google/clients/errors",
    visibility = ["//visibility:public"],
    deps = ["//vendor/google.golang.org/api/googleapi:go_default_library"],
)
